# fontup

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/utils/: font.rs  helpers.rs  mod.rs
tests/: integration_test.rs
